# clearscore

./: .gitignore  README.md  pyproject.toml
src/: average_score.py  common.py  employment_status.py  enriched_bank_data.py  main.py  paths.py  score_ranges.py
tests/: test_common.py
